[package]
name = "spectec_ast_decode"
description = "Trait for decoding SpecTec AST S-expressions"
version = "1.0.0"
edition = "2024"
authors = ["cyruscook"]
repository = "https://github.com/cyruscook/spectec_parse"
license = "BSD-3-Clause"
publish = false

[dependencies]
thiserror = "2.0.17"
sexpr_parse = { version = "1.0.0", path = "../sexpr_parse" }
